[gd_scene load_steps=4 format=3 uid="uid://bi04t2jd83mha"]

[ext_resource type="Script" uid="uid://do7gfln6tqyaq" path="res://elevador_interativo.gd" id="1_v4j7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceqy0"]
size = Vector2(52, 52)

[sub_resource type="LabelSettings" id="LabelSettings_v4j7h"]

[node name="ElevadorInterativo" type="Area2D"]
collision_mask = 3
script = ExtResource("1_v4j7h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_ceqy0")
debug_color = Color(0.476749, 0, 0.100846, 0.42)

[node name="LabelInteração" type="Label" parent="."]
offset_top = -14.0
offset_right = 87.0
offset_bottom = 17.0
label_settings = SubResource("LabelSettings_v4j7h")
autowrap_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
